Cleanups as prep for 213 (#360)